vlib/v/checker/tests/struct_field_name_duplicate_err.v
struct A {
	a int
	a string
}
fn main(){}
